--- a/old/test-project/11/gift.html
+++ b/old/test-project/11/gift.html
@@ -101,61 +101,7 @@
 
 <body>
 
-    <div class="" id="loading-screen">
-        <div class="box p-5">
-            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
-                aria-valuemin="0" aria-valuemax="100" style="height: 2.5vh;">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
-            </div>
-            <h3 class="text-center m-0 mt-3">Loading...</h3>
-        </div>
-    </div>
-
-    <div class="main-section my-5 py-5 mx-1 mx-md-5 px-0 px-md-5 bg-body rounded-4 
-        position-relative" id="main-content">
-        <div style="font-family: 'Courier New', Courier, monospace;color: black;">
-            <h1 class="d-flex justify-content-center">Happy Birthday</h1>
-            <h2 class="d-flex justify-content-center"><i class="bi bi-cake2"></i></h2>
-            <h1 class="d-flex justify-content-center">My Dear Friend </i></h1>
-        </div>
-
-
-        <!-- Swiper -->
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic1" src="" onerror="this.src='assets/plugins/default/images/pic1.jpg';" />
-                </div>
-                <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic2" src="" onerror="this.src='assets/plugins/default/images/pic2.jpg';" />
-                </div>
-                <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic3" src="" onerror="this.src='assets/plugins/default/images/pic3.jpg';" />
-                </div>
-                <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic4" src="" onerror="this.src='assets/plugins/default/images/pic4.jpg';" />
-                </div>
-                <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic5" src="" onerror="this.src='assets/plugins/default/images/pic5.jpg';" />
-                </div>
-                <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic6" src="" onerror="this.src='assets/plugins/default/images/pic6.jpg';" />
-                </div>
-                <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic7" src="" onerror="this.src='assets/plugins/default/images/pic7.jpg';" />
-                </div>
-                <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic8" src="" onerror="this.src='assets/plugins/default/images/pic8.jpg';" />
-                </div>
-                <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic9" src="" onerror="this.src='assets/plugins/default/images/pic9.jpg';" />
-                </div>
-            </div>
-            <div class="swiper-pagination"></div>
-        </div>
-        <!-- swiper -->
-
-    </div>
+    <h1>11 Notificatio</h1>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -167,20 +113,7 @@
     <script>
 
         window.addEventListener('load', function () {
-            // Hide the loading screen
-            const loadingScreen = document.getElementById('loading-screen');
-            loadingScreen.style.opacity = '0';
-            loadingScreen.style.visibility = 'hidden';
-
-            // Show the main content
-            const mainContent = document.getElementById('main-content');
-            mainContent.style.opacity = '1';
-            mainContent.style.visibility = 'visible';
-
-            // Allow scrolling after loading
-            document.body.style.overflow = 'auto';
-
-
+            
             // notification
             // ***************************************************
             if ('serviceWorker' in navigator) {
