--- a/gift.html
+++ b/gift.html
@@ -28,7 +28,7 @@
             border-radius: 10px;
         } */
 
-        .gift-img{
+        .gift-img {
             background-position: center;
             background-size: cover;
             width: 250px;
@@ -40,6 +40,7 @@
             border: 3px solid #0ff;
             border-radius: 15px;
         }
+
         #loading-screen {
             display: flex;
             justify-content: center;
@@ -124,31 +125,40 @@
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic1" src="" onerror="this.src='assets/plugins/default/images/pic1.jpg';" />
+                    <img class="gift-img" id="pic1" src=""
+                        onerror="this.src='assets/plugins/default/images/pic1.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic2" src="" onerror="this.src='assets/plugins/default/images/pic2.jpg';" />
+                    <img class="gift-img" id="pic2" src=""
+                        onerror="this.src='assets/plugins/default/images/pic2.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic3" src="" onerror="this.src='assets/plugins/default/images/pic3.jpg';" />
+                    <img class="gift-img" id="pic3" src=""
+                        onerror="this.src='assets/plugins/default/images/pic3.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic4" src="" onerror="this.src='assets/plugins/default/images/pic4.jpg';" />
+                    <img class="gift-img" id="pic4" src=""
+                        onerror="this.src='assets/plugins/default/images/pic4.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic5" src="" onerror="this.src='assets/plugins/default/images/pic5.jpg';" />
+                    <img class="gift-img" id="pic5" src=""
+                        onerror="this.src='assets/plugins/default/images/pic5.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic6" src="" onerror="this.src='assets/plugins/default/images/pic6.jpg';" />
+                    <img class="gift-img" id="pic6" src=""
+                        onerror="this.src='assets/plugins/default/images/pic6.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic7" src="" onerror="this.src='assets/plugins/default/images/pic7.jpg';" />
+                    <img class="gift-img" id="pic7" src=""
+                        onerror="this.src='assets/plugins/default/images/pic7.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic8" src="" onerror="this.src='assets/plugins/default/images/pic8.jpg';" />
+                    <img class="gift-img" id="pic8" src=""
+                        onerror="this.src='assets/plugins/default/images/pic8.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img class="gift-img" id="pic9" src="" onerror="this.src='assets/plugins/default/images/pic9.jpg';" />
+                    <img class="gift-img" id="pic9" src=""
+                        onerror="this.src='assets/plugins/default/images/pic9.jpg';" />
                 </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -185,44 +195,48 @@
             // ***************************************************
             if ('serviceWorker' in navigator) {
                 navigator.serviceWorker.register('service-worker.js')
-                    .then(function(registration) {
+                    .then(function (registration) {
                         console.log('Service Worker registered with scope:', registration.scope);
                         return registration;
                     })
-                    .catch(function(error) {
+                    .catch(function (error) {
                         console.error('Service Worker registration failed:', error);
                     });
             }
 
             setTimeout(() => {
-                Notification.requestPermission().then(perm => {
-                    if (perm === "granted") {
-                        const notifications = [
-                            { title: "শুভ জন্মদিন! 🎂🌟", body: "তোমার জীবন হোক মধুর ও সমৃদ্ধ। 🍰🎈", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🎉✨", body: "অনেক সুখ, আনন্দ, ও ভালবাসায় ভরপুর হোক। ❤️🎂", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🎉🍰", body: "তোমার দিন হোক বিশেষ ও মধুর। 🎂🌟", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🎉❤️", body: "আনন্দে কাটুক প্রতিটি মুহূর্ত। 🎂✨", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! ❤️✨", body: "তোমার সকল ইচ্ছা পূর্ণ হোক। 🎈🎉", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🌟🎁", body: "সুখী ও সুস্থ থাকো সবসময়। 🎈🎂", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🌟🎈", body: "তোমার জীবন হোক সুখময় ও সমৃদ্ধ। ❤️🎉", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🎂🎉", body: "তোমার জীবন হোক আনন্দময়। 🎁✨", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🎂🎁", body: "প্রতি মুহূর্তে খুশিতে থাকো। 🌟🍰", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🍰🌟", body: "তোমার প্রতিটি দিন হোক সুখে ভরা। 🎈❤️", icon: "assets/images/logos/suman.jpg" }
-                        ];
+                if (!localStorage.getItem('notificationsShown')) {
+                    Notification.requestPermission().then(perm => {
+                        if (perm === "granted") {
+                            const notifications = [
+                                { title: "শুভ জন্মদিন! 🎂🌟", body: "তোমার জীবন হোক মধুর ও সমৃদ্ধ। 🍰🎈", icon: "assets/images/logos/suman.jpg" },
+                                { title: "শুভ জন্মদিন! 🎉✨", body: "অনেক সুখ, আনন্দ, ও ভালবাসায় ভরপুর হোক। ❤️🎂", icon: "assets/images/logos/suman.jpg" },
+                                { title: "শুভ জন্মদিন! 🎉🍰", body: "তোমার দিন হোক বিশেষ ও মধুর। 🎂🌟", icon: "assets/images/logos/suman.jpg" },
+                                { title: "শুভ জন্মদিন! 🎉❤️", body: "আনন্দে কাটুক প্রতিটি মুহূর্ত। 🎂✨", icon: "assets/images/logos/suman.jpg" },
+                                { title: "শুভ জন্মদিন! ❤️✨", body: "তোমার সকল ইচ্ছা পূর্ণ হোক। 🎈🎉", icon: "assets/images/logos/suman.jpg" },
+                                { title: "শুভ জন্মদিন! 🌟🎁", body: "সুখী ও সুস্থ থাকো সবসময়। 🎈🎂", icon: "assets/images/logos/suman.jpg" },
+                                { title: "শুভ জন্মদিন! 🌟🎈", body: "তোমার জীবন হোক সুখময় ও সমৃদ্ধ। ❤️🎉", icon: "assets/images/logos/suman.jpg" },
+                                { title: "শুভ জন্মদিন! 🎂🎉", body: "তোমার জীবন হোক আনন্দময়। 🎁✨", icon: "assets/images/logos/suman.jpg" },
+                                { title: "শুভ জন্মদিন! 🎂🎁", body: "প্রতি মুহূর্তে খুশিতে থাকো। 🌟🍰", icon: "assets/images/logos/suman.jpg" },
+                                { title: "শুভ জন্মদিন! 🍰🌟", body: "তোমার প্রতিটি দিন হোক সুখে ভরা। 🎈❤️", icon: "assets/images/logos/suman.jpg" }
+                            ];
 
-                        notifications.forEach((notification, index) => {
-                            setTimeout(() => {
-                                navigator.serviceWorker.ready.then(function(registration) {
-                                    registration.showNotification(notification.title, {
-                                        body: notification.body,
-                                        icon: notification.icon
+                            notifications.forEach((notification, index) => {
+                                setTimeout(() => {
+                                    navigator.serviceWorker.ready.then(function (registration) {
+                                        registration.showNotification(notification.title, {
+                                            body: notification.body,
+                                            icon: notification.icon
+                                        });
                                     });
-                                });
-                            }, index * 5000); // 5 second gap
-                        });
-                    }
-                });
-            }, 2000); // 30 seconds delay
+                                }, index * 8000); // 8 second gap
+                            });
+                            // Set a flag in localStorage to indicate that notifications have been shown
+                            localStorage.setItem('notificationsShown', 'true');
+                        }
+                    });
+                }
+            }, 5000); // 5 seconds delay
             // ***************************************************
         });
 
