--- a/old/test-project/12/gift.html
+++ b/old/test-project/12/gift.html
@@ -102,7 +102,7 @@
 
 <body>
 
-    <h1>11 Notificatio</h1>
+    <h1 class="text-primary text-center">12 Notificatio</h1>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -133,16 +133,16 @@
                     Notification.requestPermission().then(perm => {
                         if (perm === "granted") {
                             const notifications = [
-                                { title: "শুভ জন্মদিন! 🎂🌟", body: "তোমার জীবন হোক মধুর ও সমৃদ্ধ। 🍰🎈", icon: "assets/images/logos/icon.png",badge: "assets/images/badge.png" },
-                                { title: "শুভ জন্মদিন! 🎉✨", body: "অনেক সুখ, আনন্দ, ও ভালবাসায় ভরপুর হোক। ❤️🎂", icon: "assets/images/logos/icon.png",badge: "assets/images/badge.png" },
-                                { title: "শুভ জন্মদিন! 🎉🍰", body: "তোমার দিন হোক বিশেষ ও মধুর। 🎂🌟", icon: "assets/images/logos/icon.png",badge: "assets/images/badge.png" },
-                                { title: "শুভ জন্মদিন! 🎉❤️", body: "আনন্দে কাটুক প্রতিটি মুহূর্ত। 🎂✨", icon: "assets/images/logos/icon.png",badge: "assets/images/badge.png" },
-                                { title: "শুভ জন্মদিন! ❤️✨", body: "তোমার সকল ইচ্ছা পূর্ণ হোক। 🎈🎉", icon: "assets/images/logos/icon.png",badge: "assets/images/badge.png" },
-                                { title: "শুভ জন্মদিন! 🌟🎁", body: "সুখী ও সুস্থ থাকো সবসময়। 🎈🎂", icon: "assets/images/logos/icon.png",badge: "assets/images/badge.png" },
-                                { title: "শুভ জন্মদিন! 🌟🎈", body: "তোমার জীবন হোক সুখময় ও সমৃদ্ধ। ❤️🎉", icon: "assets/images/logos/icon.png",badge: "assets/images/badge.png" },
-                                { title: "শুভ জন্মদিন! 🎂🎉", body: "তোমার জীবন হোক আনন্দময়। 🎁✨", icon: "assets/images/logos/icon.png",badge: "assets/images/badge.png" },
-                                { title: "শুভ জন্মদিন! 🎂🎁", body: "প্রতি মুহূর্তে খুশিতে থাকো। 🌟🍰", icon: "assets/images/logos/icon.png",badge: "assets/images/badge.png" },
-                                { title: "শুভ জন্মদিন! 🍰🌟", body: "তোমার প্রতিটি দিন হোক সুখে ভরা। 🎈❤️", icon: "assets/images/logos/icon.png",badge: "assets/images/badge.png" }
+                                { title: "শুভ জন্মদিন! 🎂🌟", body: "তোমার জীবন হোক মধুর ও সমৃদ্ধ। 🍰🎈", icon: "assets/images/logos/icon.png", badge: "assets/images/logos/badge.png" },
+                                { title: "শুভ জন্মদিন! 🎉✨", body: "অনেক সুখ, আনন্দ, ও ভালবাসায় ভরপুর হোক। ❤️🎂", icon: "assets/images/logos/icon.png", badge: "assets/images/logos/badge.png" },
+                                { title: "শুভ জন্মদিন! 🎉🍰", body: "তোমার দিন হোক বিশেষ ও মধুর। 🎂🌟", icon: "assets/images/logos/icon.png", badge: "assets/images/logos/badge.png" },
+                                { title: "শুভ জন্মদিন! 🎉❤️", body: "আনন্দে কাটুক প্রতিটি মুহূর্ত। 🎂✨", icon: "assets/images/logos/icon.png", badge: "assets/images/logos/badge.png" },
+                                { title: "শুভ জন্মদিন! ❤️✨", body: "তোমার সকল ইচ্ছা পূর্ণ হোক। 🎈🎉", icon: "assets/images/logos/icon.png", badge: "assets/images/logos/badge.png" },
+                                { title: "শুভ জন্মদিন! 🌟🎁", body: "সুখী ও সুস্থ থাকো সবসময়। 🎈🎂", icon: "assets/images/logos/icon.png", badge: "assets/images/logos/badge.png" },
+                                { title: "শুভ জন্মদিন! 🌟🎈", body: "তোমার জীবন হোক সুখময় ও সমৃদ্ধ। ❤️🎉", icon: "assets/images/logos/icon.png", badge: "assets/images/logos/badge.png" },
+                                { title: "শুভ জন্মদিন! 🎂🎉", body: "তোমার জীবন হোক আনন্দময়। 🎁✨", icon: "assets/images/logos/icon.png", badge: "assets/images/logos/badge.png" },
+                                { title: "শুভ জন্মদিন! 🎂🎁", body: "প্রতি মুহূর্তে খুশিতে থাকো। 🌟🍰", icon: "assets/images/logos/icon.png", badge: "assets/images/logos/badge.png" },
+                                { title: "শুভ জন্মদিন! 🍰🌟", body: "তোমার প্রতিটি দিন হোক সুখে ভরা। 🎈❤️", icon: "assets/images/logos/icon.png", badge: "assets/images/logos/badge.png" }
                             ];
 
                             notifications.forEach((notification, index) => {
@@ -157,7 +157,7 @@
                                 }, index * 1000); // 5 second gap
                             });
                             // Set a flag in localStorage to indicate that notifications have been shown
-                        localStorage.setItem('notificationsShown', 'true');
+                            localStorage.setItem('notificationsShown', 'true');
                         }
                     });
                 }
